--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "babel-core": "^6.20.0",
     "babel-jest": "^20.0.3",
     "babel-loader": "^6.2.9",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-react": "^6.24.0",
     "css-loader": "^0.23.0",
     "github-pages-deploy": "0.0.3",
     "jest": "^20.0.4",
@@ -47,7 +47,8 @@
     "color-functions": "^1.1.0",
     "object-assign": "^4.0.1",
     "react-input-number": "^2.1.1",
-    "react-input-slider": "^4.0.1"
+    "react-input-slider": "^4.0.1",
+    "react-proptypes": "^1.0.0"
   },
   "directories": {
     "example": "example"
